--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,13 +10,14 @@ repos:
 
     # Use ruff for linting
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.7.4
+    # Ruff version.
+    rev: v0.8.1
     hooks:
-      - id: ruff-format
+      # Run the linter.
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-        types_or: [python, pyi]
-        require_serial: true
+        args: [--fix]
+      # Run the formatter.
+      - id: ruff-format
 
     # Black for code formatting
   - repo: https://github.com/psf/black
